# NeuralEngineLib

./: .gitignore  CMakeLists.txt  README.md
cmake/: NeuralEngineLibConfig.cmake.in  NeuralEngineLibTests.cmake
example/: CMakeLists.txt  example.cpp
include/include_backend/NeuralEngineLib/backend/: backend.h
include/include_core/NeuralEngineLib/core/: core.h
include/include_utils/NeuralEngineLib/utils/: utils.h
tests/: CMakeLists.txt  test_Backend.cpp  test_Core.cpp  test_Utils.cpp
